gcc/testsuite/g++.dg/cpp0x/lambda/lambda-ice1.C
// PR c++/43790
// { dg-do compile { target c++11 } }

struct A
{
  int f();
};

int main()
{
  A a;
  auto l = [] () { return a.f(); }; // { dg-error "not captured|return" }
}
